[DDW-680] fix scrollbar in asset name

--- a/source/renderer/app/components/assets/AssetContent.scss
+++ b/source/renderer/app/components/assets/AssetContent.scss
@@ -118,6 +118,7 @@
   font-size: 12px;
   line-height: 16px;
   opacity: 0.4;
+  overflow: hidden;
 }
 
 .value {
